# JWT_Authentication_app

./: .env  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 9c98ffd3e96b_initial_migration.py  f289fcb6880d_msg.py
config/: db.py
models/: todo_model.py
routes/: todo_route.py  user_route.py
utils/: util_helper.py
validations/: validation.py
